Time: 1 ms (98.08%), Space: 46.9 MB (23.8%) - LeetHub